Sat Sep  6 20:06:09 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_binmode): check actual transcoders.

Sat Sep  6 19:54:25 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_open): fix last_tc.

Sat Sep  6 19:36:34 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_binmode): clear newline flags in writeconv_pre_ecflags.

Sat Sep  6 18:47:40 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (str_transcode0): check ECONV_HTML_TEXT_ENCODER and
	  ECONV_HTML_ATTR_ENCODER.

Sat Sep  6 18:38:47 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (allocate_converted_string): fix overflow condition.

Sat Sep  6 15:06:21 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (sym_html): new variable.
	  (sym_text): ditto.
	  (sym_attr): ditto.
	  (econv_opts): check :html=>:text and :html=>:attr.
	  (Init_transcode): initialize the above variables.

Sat Sep  6 14:46:12 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (ECONV_HTML_TEXT_ENCODER): new constant.
	  (ECONV_HTML_ATTR_ENCODER): ditto.

	* transcode.c (rb_econv_open): check ECONV_HTML_TEXT_ENCODER and
	  ECONV_HTML_ATTR_ENCODER.
	  (Init_transcode): Encoding::Converter::HTML_TEXT_ENCODER and
	  Encoding::Converter::HTML_ATTR_ENCODER defined.

Sat Sep  6 14:15:25 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (struct trans_open_t): defined to pass num_additional.
	  (trans_open_i): use struct trans_open_t.
	  (rb_econv_open): ditto.

Sat Sep  6 13:43:20 2008  Tanaka Akira  <akr@fsij.org>

	* enc/trans/escape.trans (fun_so_escape_html_attr): fix return type.

Sat Sep  6 12:43:55 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_open): needless branch removed.

Sat Sep  6 12:38:34 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_open): test condition simplified.

Sat Sep  6 12:25:31 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (stateless_encoding_i): ignore supplemental conversions.