@@ -1,3 +1,8 @@
+Sat Sep  6 20:10:48 2008  Tanaka Akira  <akr@fsij.org>
+
+	* transcode.c (econv_description): show ECONV_HTML_TEXT_ENCODER and
+	  ECONV_HTML_ATTR_ENCODER.
+
 Sat Sep  6 20:06:09 2008  Tanaka Akira  <akr@fsij.org>
 
 	* transcode.c (rb_econv_binmode): check actual transcoders.
